No critical errors

--- a/development.tex
+++ b/development.tex
@@ -19,12 +19,12 @@ Talk about libraries used by QMCPACK also.
 
 \begin{figure}
     \centering
-    \includegraphics{development/lines_overlay}
+    \includegraphics{figures/placeholder.jpg}%{development/lines_overlay.pdf}
     \caption{
         Inq source-code lines \emph{vs.} time since the start of the project.  
-        Note that test and code are developed side-by-side, and the amount of lines of code is comparable.  We     findtesting fundamental for continuous development and mainte-nance of the code. 
-        The dip near 11/2019 reflects the removalof internal exchange and corrections (XC) functional compu-tation, which was replaced by the external librarylibxc. 
-        The relatively low line count (12,000) for a fully functional DFT code is achieved by delegating functionality to libxc (shown), Multi and B.MPI3 libraries.
+        Note that test and code are developed side-by-side, and the amount of lines of code is comparable.  We     find testing fundamental for continuous development and maintenance of the code. 
+        The dip near 11/2019 reflects the removal of internal exchange and corrections (XC) functional computation, which was replaced by the external library libxc. 
+        The relatively low line count (12,000) for a fully functional DFT code is achieved by delegating functionality to libxc (shown), Multi and B.MPI3 libraries.}
     \label{fig:lines_overlay}
 \end{figure}
 
