--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 %	PACKAGES AND DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
 
-\documentclass[11pt,letter]{article}
+\documentclass[11pt]{article}
 
 % Adjusting margins to personal my need
 \addtolength{\oddsidemargin}{-.75in}
@@ -30,7 +30,7 @@
 
 \usepackage{biblatex} %Imports biblatex package
 \addbibresource{Tadashi_Refs.bib} %Import the bibliography file
-
+\DeclareUnicodeCharacter{0301}{\'{e}}
 
 
 
@@ -43,18 +43,17 @@
 \title{CENTER FOR NON-PERTURBATIVE STUDIES OF FUNCTIONAL MATERIALS UNDER NON-EQUILIBRIUM CONDITIONS\\Computational Materials Sciences Mid-Term Review} % Title
 
 \date{\today} % Date for the report
-
-\author{{\bf FWP Number:}  SWC1675 &
-{\bf Lead Institution:} Lawrence Livermore National Laboratory &
-{\bf Project Director:}  Tadashi Ogitsu Ph.D. &
-{\bf Title:}  Senior Staff Scientist &
-{\bf Phone:}  (925) 422-8511 &
-{\bf Email:} ogitsu1@llnl.gov &
-{\bf Partner Institutions:} Lawrence Berkeley National Laboratory &
-SLAC National Accelerator Laboratory}
+\author{Hello}
+% \author{
+% {\bf FWP Number:}  SWC1675 &
+% {\bf Lead Institution:} Lawrence Livermore National Laboratory &
+% {\bf Project Director:}  Tadashi Ogitsu Ph.D. &
+% {\bf Title:}  Senior Staff Scientist &
+% {\bf Phone:}  (925) 422-8511 &
+% {\bf Email:} ogitsu1@llnl.gov &
+% {\bf Partner Institutions:} Lawrence Berkeley National Laboratory & SLAC National Accelerator Laboratory}
 
 \maketitle % Inserts the title, author and date
-
 {\bf\color{red}
 % Notes:
 \begin{itemize}
