--- a/research.tex
+++ b/research.tex
@@ -80,7 +80,7 @@ In this work, {\bf Tan} has supervised photocurrent simulations, {\bf Pemmaraju}
 Follow-up work will utilize the exact-exchange functional features of the \textsc{inq} code to explore the impact of nonlocal exchange on photocurrents in these strongly correlated systems. GPU optimization of the \textsc{inq} code will be used to extend these simulations to the relevant time scales identified above.  
 
 \subsubsection{Halide perovskite work}
-\textcolor{blue}{Tadashi et al, provide description here}\\
+\textcolor{blue}{Tadashi et al, provide description here}
 
 High defect tolerance has been considered as a main reason for the long charge carrier lifetime and
 high photoluminescence quantum yield in bulk lead halide perovskites (LHPs). On the other hand,
