Added some text to INQ intro

--- a/Tadashi_Refs.bib
+++ b/Tadashi_Refs.bib
@@ -382,5 +382,16 @@ author = {Yabana, K and Sato, S. A. and Noda, M. and Bertsch et al, G. F.},
 title = {http://salmon-tddft.jp},
 year = {2017}
 }
-
+@article{Andrade2021,
+abstract = {We present INQ, a new implementation of density functional theory (DFT) and time-dependent DFT (TDDFT) written from scratch to work on graphical processing units (GPUs). Besides GPU support, INQ makes use of modern code design features and takes advantage of newly available hardware. By designing the code around algorithms, rather than against specific implementations and numerical libraries, we aim to provide a concise and modular code. The result is a fairly complete DFT/TDDFT implementation in roughly 12,000 lines of open-source C++ code representing a modular platform for community-driven application development on emerging high-performance computing architectures for the simulation of materials.},
+archivePrefix = {arXiv},
+arxivId = {2106.03872},
+author = {Andrade, Xavier and Pemmaraju, Chaitanya Das and Kartsev, Alexey and Xiao, Jun and Lindenberg, Aaron and Rajpurohit, Sangeeta and Tan, Liang Z. and Ogitsu, Tadashi and Correa, Alfredo A.},
+eprint = {2106.03872},
+file = {:Users/dasc/Library/Application Support/Mendeley Desktop/Downloaded/Andrade et al. - 2021 - INQ, a modern GPU-accelerated computational framework for (time-dependent) density functional theory.pdf:pdf},
+month = {jun},
+title = {{INQ, a modern GPU-accelerated computational framework for (time-dependent) density functional theory}},
+url = {http://arxiv.org/abs/2106.03872},
+year = {2021}
+}
 
