--- a/management.tex
+++ b/management.tex
@@ -11,7 +11,7 @@ Accordingly, we determined that our focus to be on developing and maintaining fl
 
 Taking above into consideration, two staff scientists, {\bf Correa} and {\bf Andrade}, at 0.5FTE level were dedicated for design and implementation of our RT-TDDFT software libraries named, INQ. {\bf Correa} has an extensive experience in implementing TDDFT algorithm into Qbox code written by Francois Gygi in C++ computer language and MPI parallelization. In addition, he has been developing C++ template library named Multi for QMCPACK project. Design of Multi shares the same philosophy with our project: provide basic libraries that are designed to be used by scientists (not expert programmers), while securing good performance on complex HPC systems such as a CPU+GPU hybrid computer. {\bf Andrade} has an extensive experience in developing another TDDFT open software named OCTOPUS, in particular, he contributed to its GPU optimization.  
 
-Based on their experiences, {\bf Correa} assumed responsibilities on overall design of the INQ library and sogtware development progress, while {\bf Andrade} assumed responsibility on the design and implementation intimately related to GPU optimization. They held nearly daily communication in the earlier stage to develop overall software design guideline for maximizing balance between software programmability, transferability and performance. 
+Based on their experiences, {\bf Correa} assumed responsibilities on overall design of the INQ library and software development progress, while {\bf Andrade} assumed responsibility on the design and implementation intimately related to GPU optimization. They held nearly daily communication in the earlier stage to develop overall software design guideline for maximizing balance between software programmability, transferability and performance. 
 
 One of the most important aspects of software development is a systematic testing. We must ensure that our software produce reliable and reproducible results that are essential for scientific research. {\bf Pemmaraju} (0.1FTE) together with his PD, Alexey Kertzev (1PD), who are experts on TDDFT simulations have developed software testing protocols, which means identifying the type of systems, simulations and physical quantities to be compared against the results produced with well established codes such as QE, Octopus and QB@ll. Note that the software testing suites will be distributed together with the software in order for the external collaborators for their convenience. {\bf Pemmeraju} assumed responsibility in designing and performing INQ software tests.
 
