Added inq design figure collection

--- a/research.tex
+++ b/research.tex
@@ -46,7 +46,7 @@ With the widespread adoption of Graphical Processing Units (GPUs) as a powerful 
 \paragraph{General features and design}
 \begin{figure}[h]
     \centering
-    \includegraphics{figures/Water}
+    \includegraphics[width=1.0\linewidth]{figures/INQ_design_features.pdf}
     \caption{
         The ionization of liquid water and formation of solvated \(\mathrm{H_3O^+}\), \(\mathrm{OH\cdot}\) radical and electron species is followed by the local thermalization involving energy exchange between the electronic and ionic degrees of freedom.
     }
