--- a/research.tex
+++ b/research.tex
@@ -31,29 +31,34 @@ Note to ourselves:
     \item k-points and non-orthgonal cell
     \item User defined operation for external collaborator? How to balance with performance?
     \item How to expand user base need to be spelled out: Online tutorial by Xavier in late summer, ESW, TMF users meeting (Liang gave us material), SLAC (name?) workshop, US-Africa collaboration (?)
-    \item CCMS to expand collaboration: two summer student from Andre and ? with Alfredo and Kejun from Yuan with Tadashi. Perhaps, get theirs support information and relevant research area to make it more convincing and conpelling.
+    \item CCMS to expand collaboration: two summer student from Andre and ? with Alfredo and Kejun from Yuan with Tadashi. Perhaps, get theirs support information and relevant research area to make it more convincing and compelling.
 \end{itemize}
 
 }
 \clearpage
 
 \section{Progress and Accomplishments to date} 
-As outlined above, the primary strategic objective of the NPNEQ CMS center during the first 18 months of the funding period was the development of a scalable and extensible DFT/RT-TDDFT platform that is fully compatible with existing petascale and near-term exascale hybrid CPU-GPU architectures. This objective was achieved with the recent release of the INQ platform~\cite{Andrade2021}. In parallel however, the team also pursued collaborative research efforts leading to science outcomes in the area of \textit{ultrafast materials science} using alternate tools and methodologies some of which will be incorporated into the larger INQ ecosystem of codes in future. In the following we provide a summary of both the software development and scientific research efforts within NPNEQ.   
+As outlined above, the primary strategic objective of the NPNEQ CMS center during the first 18 months of the funding period was the development of a scalable and extensible DFT/RT-TDDFT platform that is fully compatible with existing petascale and near-term exascale hybrid CPU-GPU architectures. This objective was achieved with the recent release of \textsc{INQ}~\cite{Andrade2021}. In parallel however, the team also pursued multi-institutional collaborative research efforts leading to science outcomes in the area of \textit{ultrafast materials science} using alternate tools and methodologies some of which will be incorporated into the larger INQ ecosystem of codes in future. In the following we provide a summary of both the software development and scientific research efforts within NPNEQ.   
 \subsection{Code Development}
 \subsubsection{The INQ DFT/TDDFT platform} 
 With the widespread adoption of Graphical Processing Units (GPUs) as a powerful and energy efficient hardware paradigm for scientific computing over the past fifteen years and with the ongoing migration of DOE's national super-computing facilities from CPU to networked hybrid CPU-GPU architectures, it is of paramount importance within computational materials science that the community has access to electronic structure codes that are fully compatible with the emerging GPU computing landscape. The INQ platform~\cite{Andrade2021} under development by the NPNEQ team addresses this need within the context of Density Functional Theory (DFT) based approaches to materials simulation while further specializing to nonperturbative simulations of materials under nonequilibrum conditions. During the first 18 months of this funding period, the NPNEQ center  accomplished the design and development tasks necessary to deliver a modular and extensible GPU-accelerated software solution for DFT/TDDFT led by LLNL PIs \textbf{Andrade} and \textbf{Correa}. In the following we outline the unique design features of INQ as well as it's current capabilities:
 
 \paragraph{General features and design}
+The design philosophy of INQ differs in many important respects from established Fortran/C based DFT/TDDFT codes developed in previous decades to run on CPUs: Unlike the CPU computing model that matured decades ago, GPU computing is still rapidly evolving with different hardware designs  competing for primacy in the super-computing space and vendors making significant low-level updates and modifications on a regular basis. \textsc{INQ} is therefore designed from the outset to be easily modified and improved on top of evolving hardware, while providing consistent results and behavior independent of specific vendor platforms. \textsc{INQ} achieves this goal through abstraction by implementing a clear separation between different classes of software components namely: application (DFT/TDDFT) specific code, infrastructure (data-structures, basis-set, boundary conditions etc) code and numerical library (blas, FFTs etc) code. 
+\newline 
+\newline
+As shown if Fig~\ref{fig:inq_design}(a), in traditional DFT/TDDFT programs, the different software components are rather tightly coupled into monolithic software units and the programmer may encounter all classes of code within a given subroutine or function. \textsc{INQ} on the other hand implements a hierarchical structure with an application (DFT/TDDFT) code layer that sits on top of an infrastructure library layer which gracefully handles all hardware-dependent decisions. A programmer working with the DFT/TDDFT layer then encounters a much simplified programming interface that  syntactically resembles the relevant physics equations~(see ref.~\cite{Andrade2021}) and is shielded from lower level representation-specific and hardware-specific details. This hierarchical design is critical for developing code that is hardware portable while simultaneously reducing the learning curve for new developers from the DFT community to be able to quickly add functionality in the application layer.
 \begin{figure}[h]
     \centering
     \includegraphics[width=1.0\linewidth]{figures/INQ_design_features.pdf}
     \caption{
-        The ionization of liquid water and formation of solvated \(\mathrm{H_3O^+}\), \(\mathrm{OH\cdot}\) radical and electron species is followed by the local thermalization involving energy exchange between the electronic and ionic degrees of freedom.
+        Key design features of the INQ framework. (a) INQ was built from the outset as a library that can operate on both CPU and GPU hardware, (b) At roughly 12,000 lines of code, INQ is extremely lightweight compared to other DFT/TDDFT codes offering comparable functionality, (c) INQ brings together a highly modular hierarchy of libraries ensuring maximum adaptability with respect to future hardware and software changes.    
     }
-    \label{fig:water}
+    \label{fig:inq_design}
 \end{figure}
-This is why our main objective when designing and
-developing inq is that it can be easily modified and improved, while providing consistent results and behavior.
+\newline
+The hardware portability of \textsc{INQ} is practically achieved through a highly modular design of its library layer which brings together a number of different libraries that were developed both at LLNL and by the extended DFT community. Some of the key libraries used in INQ the relationships  between them  
+
 At the same time, it should offer all the features expected
 of a modern electronic structure code and the highest
 performance possible. We combine several elements to
@@ -85,12 +90,50 @@ in section VI.
 \paragraph{GPU-MPI functionality and scaling}
 1-1.5 pages including figures
 \paragraph{Validation of results}
-1 page including figures
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=1.0\linewidth]{figures/Results-Fig.pdf}
+    \caption{
+         Comparison between inq and the established electronic structure codes quantum espresso (QE) and octopus.
+Results for ground state total energies and real-time TDDFT optical response are shown. (a) Total energy vs bond length in
+N2 (b) Total energy vs lattice constant in bulk Silicon (c) Time evolution of the dipole moment in gas phase H$_2$O following a
+“kick” perturbation (d) Linear optical absorption of molecular H$_2$O. In all cases there is a high-level of agreement between the
+codes.  
+    }
+    \label{fig:inq_design}
+\end{figure}
+
+\textbf{1 page including figures}
 
 Mention stopping, hook to Future work
 
-\subsubsection{Sangeeta's tight binding code}
-1-1.5 pages Description of capabilities and code improvements carried out under NPNEQ.
+\subsubsection{Dynamics of Tight Binding models}\label{sec:tight-binding}
+
+Careful model building based on first-principles calculations combined with large-scale model simulations is a promising route to produce interesting insights into the dynamic behavior of  
+materials driven far from equilibrium. We have developed an atomic-orbital-based
+tight-binding code for simulations on large time and
+length scales to supplement the capabilities of inq. These models treat
+charge, spin, orbital, and atomic degrees of freedom explicitly, capturing the quantum effects of 
+charge carriers, the non-collinear spin dynamics, and the
+cooperative lattice vibrations. 
+
+With the current code, structural and electronic optimization
+can be performed to study the ground state properties. 
+For simulating the relaxation dynamics of excited solids, 
+the code supports Ehrenfest dynamics and Car-Parrinello dynamics. 
+The effect of linearly polarized light field is implemented 
+via Peierls substitution method. Our recently published work
+on manganites~\cite{Sangeeta2020a} demonstrates the potential of such tight-binding
+models to study non-equilibrium dynamics in functional quantum materials. 
+
+During the project period, the code has been extended to simulate multilayer
+oxide structures, layered transition metal dichalcogenides (TMDC), and circularly polarized excitations. 
+Work is in progress to implement further extensions such as spin-orbit couplings,  van der Waals (vdW) interactions, and Nose-Hover thermostat to incorporate finite-temperature effects. Additionally, the inclusion of external magnetic fields will allow for the simulation of magnetic
+excitations and magnon dispersion. Solving for these spin-waves will be done in large unit cells using
+an effective spin Hamiltonian consisting of Zeeman effects, exchange interactions and magnetic
+anisotropies. 
+
+
 
 \subsection{Collaborative science}
 \textcolor{red}{Descriptions of type-A projects.}
@@ -119,29 +162,15 @@ In this work, {\bf Tan} has supervised photocurrent simulations, {\bf Pemmaraju}
 Follow-up work will utilize the exact-exchange functional features of the \textsc{inq} code to explore the impact of nonlocal exchange on photocurrents in these strongly correlated systems. GPU optimization of the \textsc{inq} code will be used to extend these simulations to the relevant time scales identified above.  
 
 \subsubsection{Halide perovskite work}
-\textcolor{blue}{Tadashi et al, provide description here}
 
 High defect tolerance has been considered as a main reason for the long charge carrier lifetime and
 high photoluminescence quantum yield in bulk lead halide perovskites (LHPs). On the other hand,
 surface defects play a critical role in determining charge carrier dynamics and optical properties,
 especially for LHP nanocrystals and quantum dots. Revealing the nature of surface defects and
-developing strategy for their effective passivation are thus of strong interest. Focusing on a
-prototypical LHP, CsPbBr$_3$, our work uses first-principles calculations to reveal that interstitial and
-antisite defects can have lower formation energy when they form at the surface instead of bulk while
-simultaneously creating deep trap states within the bandgap. Meanwhile, the formation of halide
-vacancies is energetically less favorable. Based on a new surface defect model, we demonstrate the
-explicit role of molecular ligands in passivating these defects which eliminate trap states in favor of
-shallow states, which enhances photoluminescence. (See Fig~\ref{fig:defect})
+developing strategy for their effective passivation are thus of strong interest.  {\bf Tan} and {\bf Ogitsu}, together with collaborators at UCSC, have used first-principles calculations to reveal that interstitial and antisite defects in a prototypical LHP, CsPbBr$_3$, can have lower formation energy when they form at the surface instead of bulk while simultaneously creating deep trap states within the bandgap.  We show how to choose molecular ligands to passivating these defects, eliminating trap states in favor of shallow states, which enhances photoluminescence. (See Fig~\ref{fig:defect}) This work has implications for  the field of LHPs, especially LHP devices where interfacial chemistry plays an important role in the optoelectronic properties and stability.
 
-Analysis of their charge transition levels shows two
-defects, Pbi and BrPb, that simultaneously possess low formation energy and deep trap states due to
-dangling bonds and antibonding states, respectively. These deep trap states may be responsible for
-affecting optical properties such as photoluminescence. In addition, we explicitly explored the
-mechanism of defect passivation by molecular ligands wherein we established that ligands can
-effectively passivate not only vacancies but also interstitial atoms and antisites due to a charge transfer
-between the ligand and localized states of the defect. This work has important implications in the field
-of LHPs, especially LHP devices where interfacial chemistry plays an important role in the
-optoelectronic properties and stability.
+This work forms the basis for planned real-time simulations of lossy processes in the LHPs, such as non-radiative recombination processes and dephasing. Even though the natural time scales of these processes are longer than   
+
 
 \begin{figure}[h]
     \centering
@@ -172,7 +201,7 @@ Our simulations revealed a nonlinear multi-step photo-ionization process in liqu
 In the near future we plan to further extend our studies in this prototypical water system by simulating nonadiabatic Ehrenfest electron-ion dynamics during and after laser illumination using our RT-TDDFT platform \textsc{inq} and compare our results with recent ultrafast experiments. 
 \subsubsection{WTe2 collaborations}
 
-\subsubsection{Sangeeta's collaborations at the Foundry}
+\subsubsection{Charge density wave melting in 2D materials}
 In this experimental collaboration, we perform the first ultrafast investigation of TaTe$_2$, which exhibits unique charge density wave (CDW) and lattice structural order characterised by a transition upon cooling from stripe-like trimer chains into a (3x3) superstructure of trimer clusters. 
 
 We develop computational models of the ultrafast photoinduced dynamics in TaTe2. These models will incorporate the electronic and atomic structure as well as their strong interactions to calculate the atomic trajectories. Density-functional calculations indicate that the initial quench is triggered by Ta trimer bonding to nonbonding transitions that destabilises the clusters, unlike CDW melting in other TaX$_2$ compounds.
@@ -191,6 +220,12 @@ Utilising MeV-scale ultrafast electron diffraction, the TaTe$_2$ structural dyna
 Mention: Electron-phonon development from stopping power.  Figure.
 
 \paragraph{Interfacing INQ with TB codes}
+
+We plan to use INQ in combination with our tight-binding dynamics code (Section.~\ref{sec:tight-binding}) for parameter extraction and for identification of the relevant degrees of freedom to be retained in these downfolded models.  
+The system-specific parameters for the tight-binding model and
+spin Hamiltonian will be extracted from INQ code. The phonon band
+structure calculations performed with INQ will be used to include
+the important phonon modes in the model. 
 
 Mention: Modularity of INQ makes scripting obsolete because of high throughput capability. Workflow improvements in INQ.
 
@@ -245,7 +280,7 @@ As a by-product of this work, the \textsc{inq} code will contain an interface th
 
 Nonlinear optical phenomena arise when light at sufficiently high intensities interacts with matter. Nonlinear response underlies technologically important physical effects including shift-currents, harmonic generation and frequency upconversion in photovoltaic and optoelectronics applications among others.  Recent insights that nonlinear responses are intimately tied to the fundamental topological properties of the quantum materials, has added to the interest in controlling the excited states of these systems with  ultrafast pump-probe and nonlinear multidimensional spectroscopies.
 
-The computational studies proposed in this project are inspired by recent joint experiment-theory results reported by PIs Lindenberg and Pemmaraju on ultrafast nonlinear responses in the Weyl semimetal WTe$_2$ . Our studies showed that terahertz frequency light pulses induce large amplitude interlayer shear strains in WTe$_2$ , modulating its symmetry and potentially its topological phase. The THz induced shear strains in WTe were also found to be associated with a large transient modulation of the second harmonic generation (SHG) response whereby in the THz driven sample, the SHG response is dramatically reduced compared to noncentrosymmetic bulk WTe However since the low order nonlinear response in materials is fundamentally connected with topological quantities such as the Berry connection and Berry curvature , the question remains as to whether the observed transient reduction in SHG is a signature of a topological phase transition involving the annihilation of Weyl nodes in the Bloch band structure or that of a structural transition to a centrosymmetric geometry.
+The computational studies proposed in this project are inspired by recent joint experiment-theory results reported by PIs Lindenberg and Pemmaraju on ultrafast nonlinear responses in the Weyl semimetal WTe$_2$ . Our studies showed that terahertz frequency light pulses induce large amplitude interlayer shear strains in WTe$_2$ , modulating its symmetry and potentially its topological phase. The THz induced shear strains in WTe$_2$ were also found to be associated with a large transient modulation of the second harmonic generation (SHG) response whereby in the THz driven sample, the SHG response is dramatically reduced compared to noncentrosymmetic bulk WTe However since the low order nonlinear response in materials is fundamentally connected with topological quantities such as the Berry connection and Berry curvature , the question remains as to whether the observed transient reduction in SHG is a signature of a topological phase transition involving the annihilation of Weyl nodes in the Bloch band structure or that of a structural transition to a centrosymmetric geometry.
 
 We will investigate the electronic vs structural origins of recently observed large transient changes in the second harmonic response of the Weyl semimetal WTe$_2$ in response to terahertz driven lattice modulations. The relationship between symmetry, topology and SHG response in WTe$_2$ will be investigated using both frequency and time-domain approaches. Simulations of SHG response in \textsc{inq} will go beyond the Born-Oppenheimer approximation to model intrinsic non-equilibrium states involving transient field-driven modulations of the electrons and holes near the Weyl band crossing points. Utilizing the Ehrenfest dynamics capability of the \textsc{inq} code, we plan to investigate the role of transient in-plane currents in driving the observed 0.24 THz shear-shear responses in WTe$_2$, and the role of electron doping in tuning these responses. Such studies will contribute significantly to a detailed material specific understanding of ultrafast nonlinear response in topological materials within the TMDC family and beyond.
 
